external-snapshotter/webhook-example/webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snapshot-validation-deployment
  namespace: kube-system # NOTE: change the namespace
  labels:
    app: snapshot-validation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snapshot-validation
  template:
    metadata:
      labels:
        app: snapshot-validation
    spec:
      containers:
      - name: snapshot-validation
        image: k8s.gcr.io/sig-storage/snapshot-validation-webhook:v4.2.0 # change the image if you wish to use your own custom validation server image
        imagePullPolicy: IfNotPresent
        args: ['--tls-cert-file=/etc/snapshot-validation-webhook/certs/cert.pem', '--tls-private-key-file=/etc/snapshot-validation-webhook/certs/key.pem']
        ports:
        - containerPort: 443 # change the port as needed
        volumeMounts:
          - name: snapshot-validation-webhook-certs
            mountPath: /etc/snapshot-validation-webhook/certs
            readOnly: true
      volumes:
        - name: snapshot-validation-webhook-certs
          secret:
            secretName: snapshot-validation-secret
---
apiVersion: v1
kind: Service
metadata:
  name: snapshot-validation-service
  namespace: kube-system # NOTE: change the namespace
spec:
  selector:
    app: snapshot-validation
  ports:
    - protocol: TCP
      port: 443 # Change if needed
      targetPort: 443 # Change if the webserver image expects a different port
